# Rcppglog

./: DESCRIPTION  NAMESPACE  README.md  cleanup  configure  configure.ac
R/: RcppExports.R
man/: Rcppglog-package.Rd
src/: ._glog  Makevars  Makevars.in  RcppExports.cpp  rcppglog_test.cpp
src/scripts/: Rcppglog_cleanup.sh  gflags_download.sh  glog_download.sh  r_config.sh
tools/: cmake_call.sh
